@@ -10,7 +10,7 @@ import java.util.List;
 public class BreakOnceCommand implements DebugCommand {
   @Override
   public Object execute(String[] args, DebuggerContext context) {
-    if(args.length < 2) return "Usage: break-once <ClassName> <lineNumber>";
+    if (args.length < 2) return "Usage: break-once <ClassName> <lineNumber>";
     String className = args[0];
     int line;
     try {
@@ -20,17 +20,16 @@ public class BreakOnceCommand implements DebugCommand {
     }
     try {
       List<ReferenceType> classes = context.getVm().classesByName(className);
-      if(classes.isEmpty()) return "Class " + className + " not found.";
-      ReferenceType refType = classes.getFirst();
+      if (classes.isEmpty()) return "Class " + className + " not found.";
+      ReferenceType refType = classes.get(0);
       List<Location> locations = refType.locationsOfLine(line);
-      if(locations.isEmpty()) return "No executable code at line " + line + " in " + className;
-      Location location = locations.getFirst();
+      if (locations.isEmpty()) return "No executable code at line " + line + " in " + className;
+      Location location = locations.get(0);
       EventRequestManager erm = context.getVm().eventRequestManager();
       BreakpointRequest bpReq = erm.createBreakpointRequest(location);
       bpReq.setSuspendPolicy(EventRequest.SUSPEND_ALL);
-      // Ajout d'un listener ou vérification lors de l'événement pour désactiver ce breakpoint.
-      // Ici, nous comptabilisons l'atteinte et le désactivons immédiatement après.
-      bpReq.putProperty("breakOnce", true);
+      // Marquer le breakpoint comme one-shot
+      bpReq.putProperty("breakOnce", Boolean.TRUE);
       bpReq.enable();
       return "One-shot breakpoint set at " + className + ":" + line;
     } catch (Exception e) {
